remove un-used LRC field from site catalog
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1725 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+(03/03/15)
+*** Unused lrc field in site catalog removed.
+
 (03/03/08)
 *** Stage out wrapper log files in a similar fashion to kickstart records.
 
