--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,8 @@
 (03/03/15)
 *** Unused lrc field in site catalog removed.
 
+*** url field in site catalog execute element is now optional.
+
 (03/03/08)
 *** Stage out wrapper log files in a similar fashion to kickstart records.
 
