avoid opening the info file for every log message
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1760 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,8 @@
-(03/03/15)
+(03/25/08)
+
+*** Logging performance improvement in wrapper.sh
+
+(03/15/08)
 *** Unused lrc field in site catalog removed.
 
 *** url field in site catalog execute element is now optional.
