escaping in string literals
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1762 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+(03/26/08)
+*** String literals now use \ as escape character - for example, use \"
+    to insert a quote into a string literal. Where \ was previously used
+    in a string literal, it is now necessary to escape it as \\
+
 (03/25/08)
 
 *** Logging performance improvement in wrapper.sh
