fix bug 132 - generated intermediate XML did not always validate because stdin,out,err could come out in different orders. this fixes that and adds a few regression tests.
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1787 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/tests/language/working-base/file_counter.xml
+++ b/tests/language/working-base/file_counter.xml
@@ -41,8 +41,7 @@
       <application>
         <executable>wc</executable>
         <stdin><function name="filename">
-          <variableReference>f</variableReference></function></stdin>
-        <stdout><function name="filename">
+          <variableReference>f</variableReference></function></stdin><stdout><function name="filename">
           <variableReference>c</variableReference></function></stdout>  </application>
     </binding>
   </procedure>
