initialScore and jobThrottle properties per BoundContact
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1991 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/karajan/CHANGES.txt
+++ b/cog/modules/karajan/CHANGES.txt
@@ -1,3 +1,11 @@
+(04/29/2008)
+
+*** WeightHostScheduler initial score and load factor can now be set
+    per host, by setting properties in the BoundHost object for each
+    host: initialScore for the initial score (defaults to 0), and
+    jobThrottle (defaults to the system-wide default value, set through
+    other properties)
+
 (03/15/2008)
 
 *** The WeightedHost scheduler now has a lower bound (of -10)
