only print warning when redirection requested
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1993 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-gt4_0_0/CHANGES.txt
+++ b/cog/modules/provider-gt4_0_0/CHANGES.txt
@@ -1,3 +1,10 @@
+(04/30/2008)
+
+*** Print a warning instead of failing when redirection is
+    requested. Redirection requests will be silently ignored.
+    This can be overriden by saying "fail.on.redirect=true"
+    in the provider properties file.
+
 (03/06/2008)
 
 *** Added support for host_types attribute (patch from benc)
