doc readme note on which DarwinPorts package to install for docbook
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1873 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/docs/README
+++ b/docs/README
@@ -21,6 +21,10 @@ directory. This can be done with a symlink if docbook is installed elsewhere.
 
 For example, on benc's os x machine:
 
+# install docbook from DarwinPorts
+$ sudo port install docbook-xsl
+
+# setup links
 $ cd formatting
 $ ln -s /opt/local/share/xsl/docbook-xsl/ docbook
 
