--- a/modules/provider-condor/CHANGES.txt
+++ b/modules/provider-condor/CHANGES.txt
@@ -1,3 +1,7 @@
+(05/16/2008)
+
+*** double-quote symbols in arguments are now escaped
+
 (04/18/2005)
 
 *** renamed this module from "core-provider-condor" to 
