--- a/tests/language/working-base/005-procedure-invocation.xml
+++ b/tests/language/working-base/005-procedure-invocation.xml
@@ -1,8 +1,20 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <procedure name="echo">
+
+      <input 
+    name="i" type="int"
+
+     xsi:nil="true" />
+    <binding>
+      <application>
+        <executable>echo</executable>
+        <variableReference>i</variableReference>  </application>
+    </binding>
+  </procedure>
   <variable name="greetings" type="int" xsi:nil="true"/>
-  <call proc="echo" src="line 2">
+  <call proc="echo" src="line 7">
     <input><variableReference>greetings</variableReference></input>
   </call>
 </program>
