--- a/tests/language/working-base/006-procedure-invocation-with-assign.xml
+++ b/tests/language/working-base/006-procedure-invocation-with-assign.xml
@@ -1,9 +1,34 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <types>
+    <xs:schema targetNamespace="http://ci.uchicago.edu/swift/2007/07/swiftscript">
+     <xs:simpleType name="file">
+       <xs:restriction base="string"/>
+     </xs:simpleType>
+    </xs:schema>
+  </types>
+  <procedure name="echo">
+
+      <output 
+    name="f" type="file"
+
+     xsi:nil="true" />
+
+      <input 
+    name="i" type="int"
+
+     xsi:nil="true" />
+    <binding>
+      <application>
+        <executable>echo</executable>
+        <stdout><function name="filename">
+          <variableReference>f</variableReference></function></stdout><variableReference>i</variableReference>  </application>
+    </binding>
+  </procedure>
   <variable name="greetings" type="int" xsi:nil="true"/>
   <variable name="hw" type="file" xsi:nil="true"/>
-  <call proc="echo" src="line 2">
+  <call proc="echo" src="line 8">
     <output><variableReference>hw</variableReference></output>
     <input><variableReference>greetings</variableReference></input>
   </call>
