--- a/tests/language/working-base/010-foreach-array.xml
+++ b/tests/language/working-base/010-foreach-array.xml
@@ -1,11 +1,27 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <procedure name="num">
+
+      <output 
+    name="n" type="int"
+
+     xsi:nil="true" />
+
+      <input 
+    name="i" type="int"
+
+     xsi:nil="true" />
+    <assign src="line 2">
+     <variableReference>n</variableReference>
+     <variableReference>i</variableReference>
+    </assign>
+  </procedure>
   <variable name="fa" type="int[]" xsi:nil="true"/>
   <variable name="sa" type="int[]" xsi:nil="true"/>
-  <foreach var="s"  indexVar="i" src="line 3">
+  <foreach var="s"  indexVar="i" src="line 6">
   <in><variableReference>sa</variableReference></in>
-  <body><call proc="echo" src="line 3">
+  <body><call proc="num" src="line 6">
       <output><arraySubscript>
        <variableReference>fa</variableReference>
        <variableReference>i</variableReference>
