--- a/tests/language/working-base/012-foreach.xml
+++ b/tests/language/working-base/012-foreach.xml
@@ -1,11 +1,27 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <procedure name="num">
+
+      <output 
+    name="x" type="int"
+
+     xsi:nil="true" />
+
+      <input 
+    name="i" type="int"
+
+     xsi:nil="true" />
+    <assign src="line 2">
+     <variableReference>x</variableReference>
+     <variableReference>i</variableReference>
+    </assign>
+  </procedure>
   <variable name="sa" type="int[]" xsi:nil="true"/>
-  <foreach var="s"  src="line 2">
+  <foreach var="s"  src="line 5">
   <in><variableReference>sa</variableReference></in>
   <body><variable name="a" type="int" xsi:nil="true"/>
-    <call proc="echo" src="line 2">
+    <call proc="num" src="line 5">
       <output><variableReference>a</variableReference></output>
       <input><variableReference>s</variableReference></input>
     </call></body>
