--- a/tests/language/working-base/020-procedure-invocation-no-param.xml
+++ b/tests/language/working-base/020-procedure-invocation-no-param.xml
@@ -1,6 +1,13 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <call proc="echo" src="line 1">
+  <procedure name="echo">
+    <binding>
+      <application>
+        <executable>echo</executable>
+      </application>
+    </binding>
+  </procedure>
+  <call proc="echo" src="line 4">
   </call>
 </program>
