--- a/tests/language/working-base/021-procedure-invocation-assign-no-param.xml
+++ b/tests/language/working-base/021-procedure-invocation-assign-no-param.xml
@@ -1,8 +1,19 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <procedure name="num">
+
+      <output 
+    name="o" type="int"
+
+     xsi:nil="true" />
+    <assign src="line 2">
+     <variableReference>o</variableReference>
+     <integerConstant>7</integerConstant>
+    </assign>
+  </procedure>
   <variable name="hw1" type="int" xsi:nil="true"/>
-  <call proc="echo" src="line 1">
+  <call proc="num" src="line 4">
     <output><variableReference>hw1</variableReference></output>
   </call>
 </program>
