--- a/tests/language/working-base/026-optional-arg.xml
+++ b/tests/language/working-base/026-optional-arg.xml
@@ -1,8 +1,41 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <types>
+    <xs:schema targetNamespace="http://ci.uchicago.edu/swift/2007/07/swiftscript">
+     <xs:simpleType name="File">
+       <xs:restriction base="string"/>
+     </xs:simpleType>
+    </xs:schema>
+  </types>
+  <procedure name="myproc1">
+
+      <output 
+    name="f" type="File"
+
+     xsi:nil="true" />
+
+      <input 
+    name="i" type="int"
+
+     xsi:nil="true" />
+
+      <input 
+    name="optional_arg" type="string"
+
+    > 
+    <stringConstant>default</stringConstant>
+
+      </input>
+    <binding>
+      <application>
+        <executable>echo</executable>
+        <stdout><function name="filename">
+          <variableReference>f</variableReference></function></stdout><variableReference>optional_arg</variableReference>  </application>
+    </binding>
+  </procedure>
   <variable name="out" type="File" xsi:nil="true"/>
-  <call proc="myproc1" src="line 1">
+  <call proc="myproc1" src="line 9">
     <output><variableReference>out</variableReference></output>
     <input><integerConstant>100</integerConstant></input>
     <input bind="optional_arg"><stringConstant>foo</stringConstant></input>
