--- a/tests/language/working-base/043-compound-procedure.xml
+++ b/tests/language/working-base/043-compound-procedure.xml
@@ -1,13 +1,25 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <procedure name="j">
+
+      <input 
+    name="bar" type="int"
+
+     xsi:nil="true" />
+    <binding>
+      <application>
+        <executable>echo</executable>
+      </application>
+    </binding>
+  </procedure>
   <procedure name="foo">
 
       <input 
     name="bar" type="fizz"
 
      xsi:nil="true" />
-    <call proc="j" src="line 1">
+    <call proc="j" src="line 4">
       <input><variableReference>bar</variableReference></input>
     </call>
   </procedure>
