--- a/tests/language/working-base/case1.xml
+++ b/tests/language/working-base/case1.xml
@@ -1,6 +1,18 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <procedure name="f">
+
+      <input 
+    name="g" type="int"
+
+     xsi:nil="true" />
+    <binding>
+      <application>
+        <executable>echo</executable>
+        <variableReference>g</variableReference>  </application>
+    </binding>
+  </procedure>
   <variable name="d" type="int"><integerConstant>5</integerConstant></variable>
   <variable name="j" type="int" xsi:nil="true"/>
   <variable name="uuu" type="int" xsi:nil="true"/>
@@ -13,7 +25,7 @@
     <case>
       <integerConstant>1</integerConstant>
       <statements>
-      <call proc="f" src="line 9">
+      <call proc="f" src="line 12">
         <input><variableReference>g</variableReference></input>
       </call>
       </statements>
@@ -21,13 +33,13 @@
     <case>
       <integerConstant>5</integerConstant>
       <statements>
-      <assign src="line 12">
+      <assign src="line 15">
        <variableReference>j</variableReference>
        <integerConstant>7</integerConstant>
       </assign>
-      <assign src="line 13">
+      <assign src="line 16">
        <variableReference>uuu</variableReference>
-       <function name="fn">
+       <function name="filename">
          <arith op="+">
            <arith op="+">
              <arith op="+">
@@ -45,7 +57,7 @@
       </statements>
     </case>
     <default>
-      <assign src="line 15">
+      <assign src="line 18">
        <variableReference>s</variableReference>
        <stringConstant>the default</stringConstant>
       </assign>
