--- a/tests/language/working-base/case2.xml
+++ b/tests/language/working-base/case2.xml
@@ -1,6 +1,22 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <procedure name="f">
+
+      <output 
+    name="r" type="int"
+
+     xsi:nil="true" />
+
+      <input 
+    name="i" type="int"
+
+     xsi:nil="true" />
+    <assign src="line 1">
+     <variableReference>r</variableReference>
+     <variableReference>i</variableReference>
+    </assign>
+  </procedure>
   <variable name="t" type="int"><integerConstant>3</integerConstant></variable>
   <variable name="j" type="int" xsi:nil="true"/>
   <switch>
@@ -8,7 +24,7 @@
     <case>
       <integerConstant>3</integerConstant>
       <statements>
-      <call proc="f" src="line 5">
+      <call proc="f" src="line 7">
         <output><variableReference>j</variableReference></output>
         <input><integerConstant>9</integerConstant></input>
       </call>
