--- a/tests/language/working-base/case3.xml
+++ b/tests/language/working-base/case3.xml
@@ -1,6 +1,30 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <procedure name="fn">
+
+      <output 
+    name="f" type="int"
+
+     xsi:nil="true" />
+
+      <input 
+    name="i" type="int"
+
+     xsi:nil="true" />
+    <assign src="line 2">
+     <variableReference>f</variableReference>
+     <variableReference>i</variableReference>
+    </assign>
+  </procedure>
+  <procedure name="f">
+
+      <input 
+    name="i" type="int"
+
+     xsi:nil="true" />
+    <variable name="f" type="int"><variableReference>i</variableReference></variable>
+  </procedure>
   <variable name="d" type="int"><integerConstant>99</integerConstant></variable>
   <variable name="g" type="int" xsi:nil="true"/>
   <variable name="j" type="int" xsi:nil="true"/>
@@ -23,7 +47,7 @@
     <case>
       <integerConstant>3</integerConstant>
       <statements>
-      <call proc="f" src="line 10">
+      <call proc="f" src="line 15">
         <input><variableReference>g</variableReference></input>
       </call>
       </statements>
@@ -31,11 +55,11 @@
     <case>
       <integerConstant>5</integerConstant>
       <statements>
-      <assign src="line 13">
+      <assign src="line 18">
        <variableReference>j</variableReference>
        <integerConstant>7</integerConstant>
       </assign>
-      <call proc="fn" src="line 13">
+      <call proc="fn" src="line 18">
         <output><variableReference>uuu</variableReference></output>
         <input><arith op="+">
           <arith op="+">
@@ -54,7 +78,7 @@
       </statements>
     </case>
     <default>
-      <assign src="line 16">
+      <assign src="line 21">
        <variableReference>s</variableReference>
        <stringConstant>the default</stringConstant>
       </assign>
