--- a/tests/language/working-base/procedurecall-assign-multi-named-return-values.xml
+++ b/tests/language/working-base/procedurecall-assign-multi-named-return-values.xml
@@ -1,11 +1,34 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <procedure name="f">
+
+      <output 
+    name="q" type="int"
+
+     xsi:nil="true" />
+
+      <output 
+    name="r" type="int"
+
+     xsi:nil="true" />
+
+      <input 
+    name="C" type="int"
+
+     xsi:nil="true" />
+    <assign src="line 2">
+     <variableReference>q</variableReference>
+     <variableReference>C</variableReference>
+    </assign>
+    <assign src="line 2">
+     <variableReference>r</variableReference>
+     <variableReference>C</variableReference>
+    </assign>
+  </procedure>
   <variable name="i" type="int" xsi:nil="true"/>
   <variable name="j" type="int" xsi:nil="true"/>
-  <variable name="q" type="int" xsi:nil="true"/>
-  <variable name="r" type="int" xsi:nil="true"/>
-  <call proc="f" src="line 3">
+  <call proc="f" src="line 6">
     <output bind="q"><variableReference>i</variableReference></output>
     <output bind="r"><variableReference>j</variableReference></output>
     <input><integerConstant>7</integerConstant></input>
