--- a/tests/language/working-base/procedurecall-numeric-arg.xml
+++ b/tests/language/working-base/procedurecall-numeric-arg.xml
@@ -1,7 +1,19 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <call proc="f" src="line 2">
+  <procedure name="f">
+
+      <input 
+    name="i" type="int"
+
+     xsi:nil="true" />
+    <binding>
+      <application>
+        <executable>echo</executable>
+        <variableReference>i</variableReference>  </application>
+    </binding>
+  </procedure>
+  <call proc="f" src="line 4">
     <input><integerConstant>8</integerConstant></input>
   </call>
 </program>
