--- a/tests/language/working-base/x.xml
+++ b/tests/language/working-base/x.xml
@@ -1,8 +1,24 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <procedure name="q">
+
+      <output 
+    name="o" type="int"
+
+     xsi:nil="true" />
+
+      <input 
+    name="i" type="int"
+
+     xsi:nil="true" />
+    <assign src="line 1">
+     <variableReference>o</variableReference>
+     <variableReference>i</variableReference>
+    </assign>
+  </procedure>
   <variable name="foo" type="int" xsi:nil="true"/>
-  <call proc="q" src="line 1">
+  <call proc="q" src="line 3">
     <output><variableReference>foo</variableReference></output>
     <input><integerConstant>7</integerConstant></input>
   </call>
