worker-node local copying of temp files
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2051 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+(06/06/08)
+*** SWIFT_JOBDIR_PATH environment variable can be use in profiles (or
+    anywhere else that will get it to the worker script) to cause the
+    worker to copy input files to a possibly-worker-node-local working
+    directory.
+
 (04/24/08)
 *** PATHPREFIX environment variable is prefixed to the path before execution
     in wrapper.sh; this variable can be set in profile entries using the usual
