--- a/modules/transfer-gui/docs/todo.txt
+++ b/modules/transfer-gui/docs/todo.txt
@@ -5,5 +5,5 @@ Todo list:
    		1) generate a proxy from local certificate;
    		2) get a short-term proxy from a Myproxy server;
    Some explanation text will help users to make a decision and prevent confusion. 
-3. Add a "Advanced options" button to replace "RFT" button. Clicking that button will also popup a dialog to set parallel streams, 
-   TCP buffer, concurrency and whether reliable transfer is enforced or not. 
+3. Add a "Advanced options" button to replace "RFT" button. Clicking that button will also popup a dialog to set RFT service address, port,
+   parallel streams, TCP buffer, concurrency and whether reliable transfer is enforced or not. 
