Compile time type checking.
This commit contributed by Milena Nikolic <nikolicmilena@gmail.com>



git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2158 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/tests/language/working-base/00618-expr-with-func.xml
+++ b/tests/language/working-base/00618-expr-with-func.xml
@@ -3,7 +3,7 @@
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
   <variable name="i" type="int"><arith op="+">
     <integerConstant>1</integerConstant>
-    <function name="foo">
-      <integerConstant>1</integerConstant></function>
+    <function name="toint">
+      <stringConstant>1</stringConstant></function>
   </arith></variable>
 </program>
