--- a/tests/language/working-base/00615-one-param-func.xml
+++ b/tests/language/working-base/00615-one-param-func.xml
@@ -1,6 +1,6 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="i" type="int"><function name="foo">
-    <integerConstant>1</integerConstant></function></variable>
+  <variable name="i" type="int"><function name="toint">
+    <stringConstant>1</stringConstant></function></variable>
 </program>
