--- a/tests/language/working-base/00616-one-param-func-expr.xml
+++ b/tests/language/working-base/00616-one-param-func-expr.xml
@@ -2,8 +2,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
   <variable name="i" type="int"><arith op="+">
-    <function name="foo">
-      <integerConstant>1</integerConstant></function>
+    <function name="toint">
+      <stringConstant>1</stringConstant></function>
     <integerConstant>2</integerConstant>
   </arith></variable>
 </program>
