--- a/tests/language/working-base/00617-one-param-func-expr.xml
+++ b/tests/language/working-base/00617-one-param-func-expr.xml
@@ -1,9 +1,9 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="i" type="int"><function name="foo">
+  <variable name="i" type="int"><function name="toint">
     <arith op="+">
-      <integerConstant>1</integerConstant>
-      <integerConstant>2</integerConstant>
+      <stringConstant>1</stringConstant>
+      <stringConstant>2</stringConstant>
     </arith></function></variable>
 </program>
