--- a/tests/language/working-base/0064-fn-in-fn.xml
+++ b/tests/language/working-base/0064-fn-in-fn.xml
@@ -1,10 +1,10 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="i" type="int"><function name="foo">
+  <variable name="i" type="int"><function name="toint">
     <arith op="+">
-      <integerConstant>1</integerConstant>
-      <function name="baz">
-        <integerConstant>2</integerConstant></function>
+      <stringConstant>1</stringConstant>
+      <function name="strcat">
+        <stringConstant>2</stringConstant><stringConstant>1</stringConstant></function>
     </arith></function></variable>
 </program>
