--- a/tests/language/working-base/0065-fn-in-fn-simple.xml
+++ b/tests/language/working-base/0065-fn-in-fn-simple.xml
@@ -1,7 +1,7 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="i" type="int"><function name="foo">
-    <function name="baz">
-      <integerConstant>2</integerConstant></function></function></variable>
+  <variable name="i" type="int"><function name="toint">
+    <function name="strcat">
+      <stringConstant>2</stringConstant><stringConstant>1</stringConstant></function></function></variable>
 </program>
