--- a/tests/language/working-base/023-leading-whitespace.xml
+++ b/tests/language/working-base/023-leading-whitespace.xml
@@ -1,5 +1,5 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="z" type="file" xsi:nil="true"/>
+  <variable name="z" type="int" xsi:nil="true"/>
 </program>
