--- a/tests/language/working-base/025-datatypes.xml
+++ b/tests/language/working-base/025-datatypes.xml
@@ -2,8 +2,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
   <variable name="p" type="int"><integerConstant>3</integerConstant></variable>
-  <variable name="q" type="bool"><booleanConstant>false</booleanConstant></variable>
-  <variable name="r" type="bool"><booleanConstant>true</booleanConstant></variable>
+  <variable name="q" type="boolean"><booleanConstant>false</booleanConstant></variable>
+  <variable name="r" type="boolean"><booleanConstant>true</booleanConstant></variable>
   <variable name="n" type="string"><stringConstant>hello</stringConstant></variable>
-  <variable name="x" type="uri"><stringConstant>http://www.ci.uchicago.edu/</stringConstant></variable>
 </program>
