--- a/tests/language/working-base/026-optional-arg.xml
+++ b/tests/language/working-base/026-optional-arg.xml
@@ -1,13 +1,14 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  
   <types>
-    <xs:schema targetNamespace="http://ci.uchicago.edu/swift/2007/07/swiftscript">
-     <xs:simpleType name="File">
-       <xs:restriction base="string"/>
-     </xs:simpleType>
-    </xs:schema>
-  </types>
+     	<type>
+     		<typename>File</typename>
+     		<typealias>string</typealias>
+     		<typestructure></typestructure>
+     	</type>   
+  </types>  
   <procedure name="myproc1">
 
       <output 
