--- a/tests/language/working-base/030-typedef.xml
+++ b/tests/language/working-base/030-typedef.xml
@@ -1,15 +1,25 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  
   <types>
-    <xs:schema targetNamespace="http://ci.uchicago.edu/swift/2007/07/swiftscript">
-     <xs:complexType name="order">
-       <xs:sequence>
-           <xs:element name="orderNumber" type="int"/>
-           <xs:element name="description" type="string"/>
-           <xs:element name="itemNumbers" type="int[]"/>
-       </xs:sequence>
-     </xs:complexType>
-    </xs:schema>
-  </types>
+     	<type>
+     		<typename>order</typename>
+     		<typealias></typealias>
+     		<typestructure>
+     			    <member>
+     					<membername>orderNumber</membername>
+     					<membertype>int</membertype>
+     				</member>
+     			    <member>
+     					<membername>description</membername>
+     					<membertype>string</membertype>
+     				</member>
+     			    <member>
+     					<membername>itemNumbers</membername>
+     					<membertype>int[]</membertype>
+     				</member>
+     		</typestructure>
+     	</type>   
+  </types>  
 </program>
