--- a/tests/language/working-base/036-typedef-empty-semi.xml
+++ b/tests/language/working-base/036-typedef-empty-semi.xml
@@ -1,9 +1,12 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  
   <types>
-    <xs:schema targetNamespace="http://ci.uchicago.edu/swift/2007/07/swiftscript">
-     <xs:element name="foo" type="bar"/>
-    </xs:schema>
-  </types>
+        	<type>
+     		<typename>foo</typename>
+     		<typealias>bar</typealias>
+     		<typestructure></typestructure>
+     	</type>      
+  </types>  
 </program>
