--- a/tests/language/working-base/039-montage.xml
+++ b/tests/language/working-base/039-montage.xml
@@ -1,34 +1,60 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  
   <types>
-    <xs:schema targetNamespace="http://ci.uchicago.edu/swift/2007/07/swiftscript">
-     <xs:simpleType name="Image">
-       <xs:restriction base="string"/>
-     </xs:simpleType>
-     <xs:simpleType name="Header">
-       <xs:restriction base="string"/>
-     </xs:simpleType>
-     <xs:simpleType name="Table">
-       <xs:restriction base="string"/>
-     </xs:simpleType>
-     <xs:complexType name="DiffStruct">
-       <xs:sequence>
-           <xs:element name="cntr1" type="int"/>
-           <xs:element name="cntr2" type="int"/>
-           <xs:element name="plus" type="Image"/>
-           <xs:element name="minus" type="Image"/>
-           <xs:element name="diff" type="Image"/>
-       </xs:sequence>
-     </xs:complexType>
-     <xs:simpleType name="TxtFile">
-       <xs:restriction base="string"/>
-     </xs:simpleType>
-     <xs:simpleType name="JPEG">
-       <xs:restriction base="string"/>
-     </xs:simpleType>
-    </xs:schema>
-  </types>
+     	<type>
+     		<typename>Image</typename>
+     		<typealias>string</typealias>
+     		<typestructure></typestructure>
+     	</type>
+     	<type>
+     		<typename>Header</typename>
+     		<typealias>string</typealias>
+     		<typestructure></typestructure>
+     	</type>
+     	<type>
+     		<typename>Table</typename>
+     		<typealias>string</typealias>
+     		<typestructure></typestructure>
+     	</type>
+     	<type>
+     		<typename>DiffStruct</typename>
+     		<typealias></typealias>
+     		<typestructure>
+     			    <member>
+     					<membername>cntr1</membername>
+     					<membertype>int</membertype>
+     				</member>
+     			    <member>
+     					<membername>cntr2</membername>
+     					<membertype>int</membertype>
+     				</member>
+     			    <member>
+     					<membername>plus</membername>
+     					<membertype>Image</membertype>
+     				</member>
+     			    <member>
+     					<membername>minus</membername>
+     					<membertype>Image</membertype>
+     				</member>
+     			    <member>
+     					<membername>diff</membername>
+     					<membertype>Image</membertype>
+     				</member>
+     		</typestructure>
+     	</type>
+     	<type>
+     		<typename>TxtFile</typename>
+     		<typealias>string</typealias>
+     		<typestructure></typestructure>
+     	</type>
+     	<type>
+     		<typename>JPEG</typename>
+     		<typealias>string</typealias>
+     		<typestructure></typestructure>
+     	</type>   
+  </types>  
   <procedure name="mProjectPP">
 
       <output 
@@ -711,7 +737,7 @@
   <call proc="mShrink" src="line 181">
     <output><variableReference>smallMosaic</variableReference></output>
     <input><variableReference>mosaic</variableReference></input>
-    <input><integerConstant>3</integerConstant></input>
+    <input><floatConstant>3.0</floatConstant></input>
   </call>
   <dataset name="jpeg" type="JPEG">
     <file name="mosaic.jpg"/>
