--- a/tests/language/working-base/arraymapper.xml
+++ b/tests/language/working-base/arraymapper.xml
@@ -1,13 +1,14 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  
   <types>
-    <xs:schema targetNamespace="http://ci.uchicago.edu/swift/2007/07/swiftscript">
-     <xs:simpleType name="file">
-       <xs:restriction base="string"/>
-     </xs:simpleType>
-    </xs:schema>
-  </types>
+     	<type>
+     		<typename>file</typename>
+     		<typealias>string</typealias>
+     		<typestructure></typestructure>
+     	</type>   
+  </types>  
   <dataset name="files" type="file[]">
     <mapping descriptor="simple_mapper">
       <param name="pattern"><stringConstant>*</stringConstant></param>
