--- a/tests/language/working-base/diamond.xml
+++ b/tests/language/working-base/diamond.xml
@@ -1,13 +1,14 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  
   <types>
-    <xs:schema targetNamespace="http://ci.uchicago.edu/swift/2007/07/swiftscript">
-     <xs:simpleType name="file">
-       <xs:restriction base="string"/>
-     </xs:simpleType>
-    </xs:schema>
-  </types>
+     	<type>
+     		<typename>file</typename>
+     		<typealias>string</typealias>
+     		<typestructure></typestructure>
+     	</type>   
+  </types>  
   <procedure name="generate">
 
       <output 
@@ -126,7 +127,7 @@
   </dataset>
   <call proc="diamond" src="line 33">
     <output><variableReference>final</variableReference></output>
-    <input><integerConstant>1</integerConstant></input>
-    <input><integerConstant>100</integerConstant></input>
+    <input><floatConstant>1.0</floatConstant></input>
+    <input><floatConstant>100.0</floatConstant></input>
   </call>
 </program>
