--- a/tests/language/working-base/q22.xml
+++ b/tests/language/working-base/q22.xml
@@ -1,16 +1,19 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  
   <types>
-    <xs:schema targetNamespace="http://ci.uchicago.edu/swift/2007/07/swiftscript">
-     <xs:simpleType name="messagefile">
-       <xs:restriction base="string"/>
-     </xs:simpleType>
-     <xs:simpleType name="countfile">
-       <xs:restriction base="string"/>
-     </xs:simpleType>
-    </xs:schema>
-  </types>
+     	<type>
+     		<typename>messagefile</typename>
+     		<typealias>string</typealias>
+     		<typestructure></typestructure>
+     	</type>
+     	<type>
+     		<typename>countfile</typename>
+     		<typealias>string</typealias>
+     		<typestructure></typestructure>
+     	</type>   
+  </types>  
   <procedure name="countwords">
 
       <output 
