--- a/tests/language/working-base/type-marker.xml
+++ b/tests/language/working-base/type-marker.xml
@@ -1,11 +1,12 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  
   <types>
-    <xs:schema targetNamespace="http://ci.uchicago.edu/swift/2007/07/swiftscript">
-     <xs:simpleType name="markertype">
-       <xs:restriction base="string"/>
-     </xs:simpleType>
-    </xs:schema>
-  </types>
+     	<type>
+     		<typename>markertype</typename>
+     		<typealias>string</typealias>
+     		<typestructure></typestructure>
+     	</type>   
+  </types>  
 </program>
