More checks that types are defined when used.
This commit contributed by Milena Nikolic <nikolicmilena@gmail.com>


git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2161 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/tests/language/working-base/036-typedef-empty-semi.xml
+++ b/tests/language/working-base/036-typedef-empty-semi.xml
@@ -3,6 +3,11 @@
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
   
   <types>
+     	<type>
+     		<typename>bar</typename>
+     		<typealias>string</typealias>
+     		<typestructure></typestructure>
+     	</type>
         	<type>
      		<typename>foo</typename>
      		<typealias>bar</typealias>
