--- a/tests/language/working-base/013-foreach-in-proc.xml
+++ b/tests/language/working-base/013-foreach-in-proc.xml
@@ -1,6 +1,14 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  
+  <types>
+     	<type>
+     		<typename>file</typename>
+     		<typealias>string</typealias>
+     		<typestructure></typestructure>
+     	</type>   
+  </types>  
   <procedure name="echo">
 
       <output 
@@ -29,9 +37,9 @@
     name="sa" type="string[]"
 
      xsi:nil="true" />
-    <foreach var="s"  indexVar="i" src="line 10">
+    <foreach var="s"  indexVar="i" src="line 11">
     <in><variableReference>sa</variableReference></in>
-    <body><call proc="echo" src="line 11">
+    <body><call proc="echo" src="line 12">
         <output><arraySubscript>
          <variableReference>fa</variableReference>
          <variableReference>i</variableReference>
