--- a/tests/language/working-base/016-mapper-noparam.xml
+++ b/tests/language/working-base/016-mapper-noparam.xml
@@ -1,6 +1,14 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  
+  <types>
+     	<type>
+     		<typename>myfile</typename>
+     		<typealias>string</typealias>
+     		<typestructure></typestructure>
+     	</type>   
+  </types>  
   <dataset name="v" type="myfile">
     <mapping descriptor="simple_mapper"/>
   </dataset>
