assignments to variables are now always made separately from creation of the containing dataset, so that variables can be initialised in their declaring statements with late-computed values
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2429 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/tests/language/working-base/003-string-array-assignment.xml
+++ b/tests/language/working-base/003-string-array-assignment.xml
@@ -1,9 +1,13 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="greetings" type="string[]">
-    <array>
-      <stringConstant>how</stringConstant><stringConstant>are</stringConstant><stringConstant>you</stringConstant>
-    </array>
-  </variable>
+  <variable name="greetings" type="string[]" xsi:nil="true"/>
+  <assign src="line 3">
+   <variableReference>greetings</variableReference>
+
+     <array>
+       <stringConstant>how</stringConstant><stringConstant>are</stringConstant><stringConstant>you</stringConstant>
+     </array>
+
+  </assign>
 </program>
