--- a/tests/language/working-base/004-string-assignment.xml
+++ b/tests/language/working-base/004-string-assignment.xml
@@ -1,5 +1,9 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="greetings" type="string"><stringConstant>how</stringConstant></variable>
+  <variable name="greetings" type="string" xsi:nil="true"/>
+  <assign src="line 2">
+   <variableReference>greetings</variableReference>
+   <stringConstant>how</stringConstant>
+  </assign>
 </program>
