--- a/tests/language/working-base/0041-int-assignment.xml
+++ b/tests/language/working-base/0041-int-assignment.xml
@@ -1,5 +1,9 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="v" type="int"><integerConstant>7</integerConstant></variable>
+  <variable name="v" type="int" xsi:nil="true"/>
+  <assign src="line 2">
+   <variableReference>v</variableReference>
+   <integerConstant>7</integerConstant>
+  </assign>
 </program>
