--- a/tests/language/working-base/00618-expr-with-func.xml
+++ b/tests/language/working-base/00618-expr-with-func.xml
@@ -1,9 +1,13 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="i" type="int"><arith op="+">
-    <integerConstant>1</integerConstant>
-    <function name="toint">
-      <stringConstant>1</stringConstant></function>
-  </arith></variable>
+  <variable name="i" type="int" xsi:nil="true"/>
+  <assign src="line 2">
+   <variableReference>i</variableReference>
+   <arith op="+">
+     <integerConstant>1</integerConstant>
+     <function name="toint">
+       <stringConstant>1</stringConstant></function>
+   </arith>
+  </assign>
 </program>
