--- a/tests/language/working-base/0063-two-functions-in-expr.xml
+++ b/tests/language/working-base/0063-two-functions-in-expr.xml
@@ -1,10 +1,14 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="i" type="int"><arith op="+">
-    <function name="toint">
-      <stringConstant>1</stringConstant></function>
-    <function name="toint">
-      <stringConstant>2</stringConstant></function>
-  </arith></variable>
+  <variable name="i" type="int" xsi:nil="true"/>
+  <assign src="line 2">
+   <variableReference>i</variableReference>
+   <arith op="+">
+     <function name="toint">
+       <stringConstant>1</stringConstant></function>
+     <function name="toint">
+       <stringConstant>2</stringConstant></function>
+   </arith>
+  </assign>
 </program>
