--- a/tests/language/working-base/0064-fn-in-fn.xml
+++ b/tests/language/working-base/0064-fn-in-fn.xml
@@ -1,10 +1,14 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="i" type="int"><function name="toint">
-    <arith op="+">
-      <stringConstant>1</stringConstant>
-      <function name="strcat">
-        <stringConstant>2</stringConstant><stringConstant>1</stringConstant></function>
-    </arith></function></variable>
+  <variable name="i" type="int" xsi:nil="true"/>
+  <assign src="line 2">
+   <variableReference>i</variableReference>
+   <function name="toint">
+     <arith op="+">
+       <stringConstant>1</stringConstant>
+       <function name="strcat">
+         <stringConstant>2</stringConstant><stringConstant>1</stringConstant></function>
+     </arith></function>
+  </assign>
 </program>
