--- a/tests/language/working-base/025-datatypes.xml
+++ b/tests/language/working-base/025-datatypes.xml
@@ -1,8 +1,24 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="p" type="int"><integerConstant>3</integerConstant></variable>
-  <variable name="q" type="boolean"><booleanConstant>false</booleanConstant></variable>
-  <variable name="r" type="boolean"><booleanConstant>true</booleanConstant></variable>
-  <variable name="n" type="string"><stringConstant>hello</stringConstant></variable>
+  <variable name="p" type="int" xsi:nil="true"/>
+  <assign src="line 3">
+   <variableReference>p</variableReference>
+   <integerConstant>3</integerConstant>
+  </assign>
+  <variable name="q" type="boolean" xsi:nil="true"/>
+  <assign src="line 5">
+   <variableReference>q</variableReference>
+   <booleanConstant>false</booleanConstant>
+  </assign>
+  <variable name="r" type="boolean" xsi:nil="true"/>
+  <assign src="line 7">
+   <variableReference>r</variableReference>
+   <booleanConstant>true</booleanConstant>
+  </assign>
+  <variable name="n" type="string" xsi:nil="true"/>
+  <assign src="line 8">
+   <variableReference>n</variableReference>
+   <stringConstant>hello</stringConstant>
+  </assign>
 </program>
