--- a/tests/language/working-base/031-var-decl.xml
+++ b/tests/language/working-base/031-var-decl.xml
@@ -1,9 +1,13 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="f" type="float[]">
-    <array>
-      <floatConstant>1.0</floatConstant><floatConstant>2.0</floatConstant><floatConstant>3.0</floatConstant>
-    </array>
-  </variable>
+  <variable name="f" type="float[]" xsi:nil="true"/>
+  <assign src="line 2">
+   <variableReference>f</variableReference>
+
+     <array>
+       <floatConstant>1.0</floatConstant><floatConstant>2.0</floatConstant><floatConstant>3.0</floatConstant>
+     </array>
+
+  </assign>
 </program>
