--- a/tests/language/working-base/03101-var-decl.xml
+++ b/tests/language/working-base/03101-var-decl.xml
@@ -1,11 +1,15 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="p" type="int[]">
-    <range>
-      <integerConstant>1</integerConstant>
-      <integerConstant>9</integerConstant>
-      <integerConstant>2</integerConstant>
-    </range>
-  </variable>
+  <variable name="p" type="int[]" xsi:nil="true"/>
+  <assign src="line 2">
+   <variableReference>p</variableReference>
+
+     <range>
+       <integerConstant>1</integerConstant>
+       <integerConstant>9</integerConstant>
+       <integerConstant>2</integerConstant>
+     </range>
+
+  </assign>
 </program>
