--- a/tests/language/working-base/0311-var-decl.xml
+++ b/tests/language/working-base/0311-var-decl.xml
@@ -2,18 +2,34 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
   <variable name="x" type="int" xsi:nil="true"/>
-  <variable name="y" type="int"><integerConstant>2</integerConstant></variable>
-  <variable name="s" type="string"><stringConstant>hello</stringConstant></variable>
-  <variable name="f" type="float[]">
-    <array>
-      <floatConstant>1.0</floatConstant><floatConstant>2.0</floatConstant><floatConstant>3.0</floatConstant>
-    </array>
-  </variable>
-  <variable name="p" type="int[]">
-    <range>
-      <integerConstant>1</integerConstant>
-      <integerConstant>9</integerConstant>
-      <integerConstant>2</integerConstant>
-    </range>
-  </variable>
+  <variable name="y" type="int" xsi:nil="true"/>
+  <assign src="line 2">
+   <variableReference>y</variableReference>
+   <integerConstant>2</integerConstant>
+  </assign>
+  <variable name="s" type="string" xsi:nil="true"/>
+  <assign src="line 3">
+   <variableReference>s</variableReference>
+   <stringConstant>hello</stringConstant>
+  </assign>
+  <variable name="f" type="float[]" xsi:nil="true"/>
+  <assign src="line 4">
+   <variableReference>f</variableReference>
+
+     <array>
+       <floatConstant>1.0</floatConstant><floatConstant>2.0</floatConstant><floatConstant>3.0</floatConstant>
+     </array>
+
+  </assign>
+  <variable name="p" type="int[]" xsi:nil="true"/>
+  <assign src="line 6">
+   <variableReference>p</variableReference>
+
+     <range>
+       <integerConstant>1</integerConstant>
+       <integerConstant>9</integerConstant>
+       <integerConstant>2</integerConstant>
+     </range>
+
+  </assign>
 </program>
