--- a/tests/language/working-base/038-identifier-with-keyword-prefix.xml
+++ b/tests/language/working-base/038-identifier-with-keyword-prefix.xml
@@ -1,5 +1,9 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="fork" type="int"><integerConstant>3</integerConstant></variable>
+  <variable name="fork" type="int" xsi:nil="true"/>
+  <assign src="line 2">
+   <variableReference>fork</variableReference>
+   <integerConstant>3</integerConstant>
+  </assign>
 </program>
