--- a/tests/language/working-base/044-multiple-variable-decl.xml
+++ b/tests/language/working-base/044-multiple-variable-decl.xml
@@ -1,11 +1,27 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="a" type="int"><integerConstant>5</integerConstant></variable>
-  <variable name="c" type="int"><integerConstant>7</integerConstant></variable>
-  <variable name="q" type="int"><integerConstant>8</integerConstant></variable>
+  <variable name="a" type="int" xsi:nil="true"/>
+  <assign src="line 1">
+   <variableReference>a</variableReference>
+   <integerConstant>5</integerConstant>
+  </assign>
+  <variable name="c" type="int" xsi:nil="true"/>
+  <assign src="line 1">
+   <variableReference>c</variableReference>
+   <integerConstant>7</integerConstant>
+  </assign>
+  <variable name="q" type="int" xsi:nil="true"/>
+  <assign src="line 1">
+   <variableReference>q</variableReference>
+   <integerConstant>8</integerConstant>
+  </assign>
   <variable name="r" type="int" xsi:nil="true"/>
   <variable name="s" type="int" xsi:nil="true"/>
   <variable name="t" type="int" xsi:nil="true"/>
-  <variable name="p" type="int"><integerConstant>99</integerConstant></variable>
+  <variable name="p" type="int" xsi:nil="true"/>
+  <assign src="line 3">
+   <variableReference>p</variableReference>
+   <integerConstant>99</integerConstant>
+  </assign>
 </program>
