--- a/tests/language/working-base/case1.xml
+++ b/tests/language/working-base/case1.xml
@@ -13,7 +13,11 @@
         <variableReference>g</variableReference>  </application>
     </binding>
   </procedure>
-  <variable name="d" type="int"><integerConstant>5</integerConstant></variable>
+  <variable name="d" type="int" xsi:nil="true"/>
+  <assign src="line 5">
+   <variableReference>d</variableReference>
+   <integerConstant>5</integerConstant>
+  </assign>
   <variable name="j" type="int" xsi:nil="true"/>
   <variable name="uuu" type="int" xsi:nil="true"/>
   <variable name="s" type="string" xsi:nil="true"/>
