--- a/tests/language/working-base/case2.xml
+++ b/tests/language/working-base/case2.xml
@@ -17,7 +17,11 @@
      <variableReference>i</variableReference>
     </assign>
   </procedure>
-  <variable name="t" type="int"><integerConstant>3</integerConstant></variable>
+  <variable name="t" type="int" xsi:nil="true"/>
+  <assign src="line 4">
+   <variableReference>t</variableReference>
+   <integerConstant>3</integerConstant>
+  </assign>
   <variable name="j" type="int" xsi:nil="true"/>
   <switch>
     <variableReference>t</variableReference>
