--- a/tests/language/working-base/q22.xml
+++ b/tests/language/working-base/q22.xml
@@ -33,8 +33,16 @@
           <variableReference>f</variableReference></function>  </application>
     </binding>
   </procedure>
-  <variable name="inputNames" type="string"><stringConstant>one.txt two.txt three.txt</stringConstant></variable>
-  <variable name="outputNames" type="string"><stringConstant>one.count two.count three.count</stringConstant></variable>
+  <variable name="inputNames" type="string" xsi:nil="true"/>
+  <assign src="line 11">
+   <variableReference>inputNames</variableReference>
+   <stringConstant>one.txt two.txt three.txt</stringConstant>
+  </assign>
+  <variable name="outputNames" type="string" xsi:nil="true"/>
+  <assign src="line 13">
+   <variableReference>outputNames</variableReference>
+   <stringConstant>one.count two.count three.count</stringConstant>
+  </assign>
   <dataset name="inputfiles" type="messagefile[]">
     <mapping descriptor="array_mapper">
       <param name="files"><variableReference>inputNames</variableReference></param>
