--- a/tests/language/working-base/q23.xml
+++ b/tests/language/working-base/q23.xml
@@ -30,8 +30,12 @@
   <dataset name="outfile" type="messagefile">
     <file name="q23.txt"/>
   </dataset>
-  <variable name="message" type="string"><function name="arg">
-    <stringConstant>text</stringConstant></function></variable>
+  <variable name="message" type="string" xsi:nil="true"/>
+  <assign src="line 13">
+   <variableReference>message</variableReference>
+   <function name="arg">
+     <stringConstant>text</stringConstant></function>
+  </assign>
   <call proc="greeting" src="line 13">
     <output><variableReference>outfile</variableReference></output>
     <input><variableReference>message</variableReference></input>
