--- a/tests/language/working-base/range.xml
+++ b/tests/language/working-base/range.xml
@@ -1,13 +1,17 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="nums" type="int[]">
-    <range>
-      <integerConstant>0</integerConstant>
-      <integerConstant>20</integerConstant>
-      <integerConstant>2</integerConstant>
-    </range>
-  </variable>
+  <variable name="nums" type="int[]" xsi:nil="true"/>
+  <assign src="line 3">
+   <variableReference>nums</variableReference>
+
+     <range>
+       <integerConstant>0</integerConstant>
+       <integerConstant>20</integerConstant>
+       <integerConstant>2</integerConstant>
+     </range>
+
+  </assign>
   <foreach var="num"  src="line 3">
   <in><variableReference>nums</variableReference></in>
   <body><call proc="print" src="line 4">
